--- a/SouthHollow/assets/minecraft/models/item/snowball.json
+++ b/SouthHollow/assets/minecraft/models/item/snowball.json
@@ -1,17 +1,6 @@
 {
-  "parent": "item/generated",
+  "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "item/snowball"
-  },
-
-  "overrides": [
-    {
-      "predicate": { "custom_model_data": 0 },
-      "model": "tools/snowball"
-    },
-    {
-      "predicate": { "custom_model_data": 1 },
-      "model": "wargames/snowball"
-    }
-  ]
+    "layer0": "minecraft:item/snowball"
+  }
 }
