--- a/SouthHollow/assets/minecraft/models/hats/snowman.json
+++ b/SouthHollow/assets/minecraft/models/hats/snowman.json
@@ -376,6 +376,23 @@
 		}
 	],
 	"display": {
+		"thirdperson_righthand": {
+			"translation": [0, 2.75, 3.5],
+			"scale": [0.5, 0.5, 0.5]
+		},
+		"thirdperson_lefthand": {
+			"translation": [0, 2.75, 3.5],
+			"scale": [0.5, 0.5, 0.5]
+		},
+		"firstperson_righthand": {
+			"scale": [0.75, 0.75, 0.75]
+		},
+		"firstperson_lefthand": {
+			"scale": [0.75, 0.75, 0.75]
+		},
+		"ground": {
+			"scale": [0.5, 0.5, 0.5]
+		},
 		"gui": {
 			"rotation": [23, -148, 0],
 			"translation": [-1, -2, 0],
@@ -383,6 +400,10 @@
 		},
 		"head": {
 			"translation": [0, 10.75, 3]
+		},
+		"fixed": {
+			"translation": [0, -5, 0.75],
+			"scale": [0.75, 0.75, 0.75]
 		}
 	},
 	"groups": [
