Missing Texture Fixes (Please End Me)
Explained the reason behind the missing textures in the last commit I made.

--- a/SouthHollow/assets/minecraft/models/hideandseek/maps/unknown.json
+++ b/SouthHollow/assets/minecraft/models/hideandseek/maps/unknown.json
@@ -1,8 +1,8 @@
 {
 	"credit": "Made with Blockbench",
 	"textures": {
-		"0": "southhollow:hideandseek/mapicons/unknown",
-		"particle": "unknown"
+		"0": "item/mapicons/unknown",
+		"particle": "item/mapicons/unknownsmall"
 	},
 	"elements": [
 		{
